[package]
name = "downsampler"
version = "0.1.0"
authors = ["Michael Ravits <michael@xlucidity.com>"]

[dependencies]
chrono = "0.4"
clap = "2.32.0"
env_logger = "0.5.13"
failure = "0.1.2"
failure_derive = "0.1.2"
humantime = "1.1.1"
time = "0.1.40"
influx_db_client = "0.3.5"
serde_json = "1.0.32"
lttb = "0.1.1"