[package]
name = "downsampler"
version = "0.1.0"
authors = ["Michael Ravits <michael@xlucidity.com>"]
license = "MIT"
edition = "2018"

[dependencies]
chrono = "0.4"
clap = "2.32.0"
env_logger = "0.5.13"
failure = "0.1.2"
failure_derive = "0.1.2"
humantime = "1.1.1"
time = "0.1.40"
influx_db_client = "0.3.5"
serde_json = "1.0.32"
rayon = "1.0.2"
config = "0.9.1"
serde_derive = "1.0.80"
serde = "1.0.80"
string_template = "0.2.1"
lazy_static = "1.2.0"
redis = "0.9.1"
r2d2_redis = "0.8.0"
